crates/toml/tests/snapshots/invalid/ext/keys/no-eol-4.stderr
TOML parse error at line 1, column 6
  |
1 | 0=[0]00=[0,0,0]t=["0","0","0"]s=[1000-00-00T00:00:00Z,2000-00-00T00:00:00Z]
  |      ^
unexpected key or value, expected newline, `#`
